--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+:root {
+  --primary-color: #000814;
+  --secondary-color: #001d3d;
+  --tertiary-color: #003566;
+  --quaternary-color: #ffc300;
+  --quinary-color: #ffd60a;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +13,108 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  background-color: var(--primary-color);
+  display: flex;
+  flex-direction: column;
+  color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.content {
+  flex: 1 0 auto;
+}
+
+header {
+  background-color: var(--secondary-color);
+  text-align: center;
+}
+
+h2 {
+  padding-top: 10px;
+  margin-bottom: 0;
+}
+
+h2 a {
+  color: var(--quaternary-color);
+  text-decoration: none;
+  font-size: 2em;
+}
+
+a:visited {
+  color: var(--quaternary-color);
+}
+
+nav ul {
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+}
+
+nav ul li {
+  padding: 10px;
+}
+
+.highlight {
+  background-color: var(--tertiary-color);
+  padding: 10px;
+}
+
+.components {
+  padding: 0 25px;
+}
+
+
+/* portfolio component */
+.project-flex {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+}
+
+.project-title {
+  margin-bottom: 4px;
+  text-align: center;
+}
+
+.project-img {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+/* footer component */
+footer {
+  flex-shrink: 0;
+  margin-right: 15px;
+  margin-top: 45px;
+}
+
+footer ul {
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 15px;
+}
+
+footer ul li a {
+  color: var(--quaternary-color);
+  text-decoration: none;
+}
+
+@media screen and (min-width:980px) {
+  .project-flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-around;
+  }
 }
